<resources>
    <string name="app_name">MaRéu</string>
    <string name="title_activity_add_meeting">AddMeetingActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="meeting_title_input">Meeting Title</string>
    <string name="date_input">Date</string>
    <string name="hour_input">Hour</string>
    <string name="participants_input">Participants</string>
    <string name="save_button">Save</string>
    <string name="meeting_room_input">Meeting room</string>
    <string name="new_meeting_label">New meeting</string>
    <string name="filter">Filter</string>
    <string name="filter_meeting_list">Filter meeting list</string>
    <string name="filter_by_date_menu_item">Filter by date</string>
    <string name="filter_by_place_menu_item">Filter by meeting room</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="place_filter_dialog_title">Filter by meeting room</string>
    <string name="reset_filter">Reset filter</string>
    <string name="email_address_error">Should be email addresses separated by commas</string>
    <string name="delete_meeting">Delete meeting</string>
    <string name="place_unavailable">This place is not available at this moment</string>
    <string name="meeting_duration">Duration</string>
    <string name="minutes_short">min</string>
    <string-array name="meeting_rooms">
        <item>Mario Room</item>
        <item>Luigi Room</item>
        <item>Peach Room</item>
        <item>Bowser Room</item>
        <item>Toad Room</item>
        <item>Wario Room</item>
    </string-array>
    <string-array name="participants">
        <item>jean.talus@lamzone.com</item>
        <item>paul.hochon@lamzone.fr</item>
        <item>marie.golote@lamzone.fr</item>
        <item>pierre.hoquet@lamzone.com</item>
        <item>patrick.ortreat@lamzone.com</item>
        <item>rosalie.mentation@lamzone.com</item>
        <item>sonia.toutenbloc@lamzone.com</item>
        <item>martin.tamarre@lamzone.com</item>
    </string-array>
</resources>